--- a/Episode - 6/style.css
+++ b/Episode - 6/style.css
@@ -103,3 +103,12 @@
   display: flex;
   justify-content: space-between;
 }
+
+/* FOOTER */
+.footer {
+  text-align: center;
+  padding: 10px 0px;
+  border: 2px solid black;
+  background-color: blanchedalmond;
+  border-radius: 0px 0px 6px 6px;
+}
