--- a/Swicth Tab Project/style.css
+++ b/Swicth Tab Project/style.css
@@ -5,7 +5,7 @@
   margin: 10px;
   border: 3px solid white;
   border-radius: 10px 10px 10px 10px;
-  box-shadow: 0px 3px 5px yellow;
+  /* box-shadow: 0px 3px 5px yellow; */
 }
 .box:hover {
   cursor: pointer;
